Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Rcc-chennai.github.io : " />
+    <meta name="description" content="Retail Command Center : Informed business decisions" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Rcc-chennai.github.io</title>
+    <title>Retail Command Center</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/rcc-chennai">View on GitHub</a>
 
-          <h1 id="project_title">Rcc-chennai.github.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Retail Command Center</h1>
+          <h2 id="project_tagline">Informed business decisions</h2>
 
         </header>
     </div>
