--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
 
   <head>
-    <meta charset='utf-8' />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Retail Command Center : Informed business decisions" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+    <link type="text/css" href="styles/reset.css" rel="stylesheet" media="all" />
+    <link type="text/css" href="styles/text.css" rel="stylesheet" media="all" />
+    <link type="text/css" href="styles/960.css" rel="stylesheet" media="all" />
+    <link type="text/css" href="styles/style.css" rel="stylesheet" media="all" />
+    <link type="text/css" href="styles/jquery.countdown.css" rel="stylesheet" media="all" />
     <title>Retail Command Center</title>
-  </head>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+        <script type="text/javascript" src="script/jquery.countdown.js"></script>
+        <script type="text/javascript">
+            $(function () {
+              var austDay = new Date();
+              austDay = new Date(austDay.getFullYear() + 1, 1 - 1, 26);
+              $('#defaultCountdown').countdown({until: austDay});
+              $('#year').text(austDay.getFullYear());
+              });
+            </script>
 
+  </head>
+    
   <body>
 
     <!-- HEADER -->
