Updated the file name

--- a/index1.html
+++ b/index1.html
@@ -31,7 +31,7 @@
             </style>
         
         <body>
-            <div id="maincontent" style="background: url("http://rcc-chennai.github.io/images/1.jpg")  no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+            <div id="maincontent" style="background: url("rcc-chennai.github.io/images/1.jpg")  no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
                     
                 <div id="box"> <center> <h1 class="logo"><img id="imgSrc" src="images/Logo.png" alt=""/></h1> <h2 class="heading">Launching Soon. This November</h2><div class="detailsfront">A decision support product for the small and medium retailers. Helping drive effective decisions on planning, sourcing and managing inventory.</div> 
                 <div class="preemailbox"><p class="details">Launching soon. Enter your email to join our invite list</p><table width="370" border="0" cellspacing="0" cellpadding="0"> <tbody> <tr><td width="250"><input type="text" name="EMAIL" onclick="blank();" onblur="defaultval();" class="required email" id="email" value="Enter your email address here"></td><td width="120"><input id="subscribe-btn" name="Subscribe" type="submit" value="subscribe" onclick="Submit();"></td> </tr></tbody></table></div>
